style(all): clean up whole project