@@ -1,18 +1,20 @@
 package com.alexxsnjr.tariffservice.application;
 
+import static org.mockito.Mockito.when;
+
 import com.alexxsnjr.tariffservice.TariffFactory;
-import com.alexxsnjr.tariffservice.domain.*;
+import com.alexxsnjr.tariffservice.domain.NotAvailableTariff;
+import com.alexxsnjr.tariffservice.domain.Tariff;
+import com.alexxsnjr.tariffservice.domain.TariffRepository;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.Date;
+import java.util.List;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
-
-import java.util.Arrays;
-import java.util.Date;
-import java.util.List;
-
-import static org.mockito.Mockito.*;
 
 class PriceFinderTest {
 
@@ -28,23 +30,26 @@ class PriceFinderTest {
     }
 
     @Test
-    void testFindPriceByProductBrandAndDate_WhenAvailableTariff_ShouldReturnPriceResponse() throws NotAvailableTariff {
+    void testFindPriceByProductBrandAndDate_WhenAvailableTariff_ShouldReturnPriceResponse()
+        throws NotAvailableTariff {
         Long productId = TariffFactory.DEFAULT_PRODUCT_ID_VALUE;
         Long brandId = TariffFactory.DEFAULT_BRAND_ID_VALUE;
         Date date = new Date();
 
         Tariff availableTariff = TariffFactory.givenTariff();
 
-        List<Tariff> tariffs = Arrays.asList(availableTariff);
+        List<Tariff> tariffs = Collections.singletonList(availableTariff);
 
-        when(repository.findPriceByProductBrandAndDate(productId, brandId, date)).thenReturn(tariffs);
+        when(repository.findPriceByProductBrandAndDate(productId, brandId, date)).thenReturn(
+            tariffs);
 
         PriceResponse result = priceFinder.findPriceByProductBrandAndDate(productId, brandId, date);
 
         Assertions.assertEquals(availableTariff.getPriceId().getId(), result.getTariffId());
         Assertions.assertEquals(productId, result.getProductId());
         Assertions.assertEquals(brandId, result.getBrandId());
-        Assertions.assertEquals(availableTariff.getPriceDate().getStartDate(), result.getStartDate());
+        Assertions.assertEquals(availableTariff.getPriceDate().getStartDate(),
+            result.getStartDate());
         Assertions.assertEquals(availableTariff.getPriceDate().getEndDate(), result.getEndDate());
         Assertions.assertEquals(availableTariff.getPrice().getAmount(), result.getFinalPrice());
     }
@@ -55,9 +60,10 @@ class PriceFinderTest {
         Long brandId = TariffFactory.DEFAULT_BRAND_ID_VALUE;
         Date date = new Date();
 
-        List<Tariff> tariffs = Arrays.asList();
+        List<Tariff> tariffs = List.of();
 
-        when(repository.findPriceByProductBrandAndDate(productId, brandId, date)).thenReturn(tariffs);
+        when(repository.findPriceByProductBrandAndDate(productId, brandId, date)).thenReturn(
+            tariffs);
 
         Assertions.assertThrows(NotAvailableTariff.class, () -> {
             priceFinder.findPriceByProductBrandAndDate(productId, brandId, date);
@@ -65,7 +71,8 @@ class PriceFinderTest {
     }
 
     @Test
-    void testFindPriceByProductBrandAndDate_WhenMultipleAvailableTariffs_ShouldReturnHighestPriorityTariff() throws NotAvailableTariff {
+    void testFindPriceByProductBrandAndDate_WhenMultipleAvailableTariffs_ShouldReturnHighestPriorityTariff()
+        throws NotAvailableTariff {
         Long productId = TariffFactory.DEFAULT_PRODUCT_ID_VALUE;
         Long brandId = TariffFactory.DEFAULT_BRAND_ID_VALUE;
         Date date = new Date();
@@ -75,15 +82,18 @@ class PriceFinderTest {
 
         List<Tariff> tariffs = Arrays.asList(lowPriorityTariff, highPriorityTariff);
 
-        when(repository.findPriceByProductBrandAndDate(productId, brandId, date)).thenReturn(tariffs);
+        when(repository.findPriceByProductBrandAndDate(productId, brandId, date)).thenReturn(
+            tariffs);
 
         PriceResponse result = priceFinder.findPriceByProductBrandAndDate(productId, brandId, date);
 
         Assertions.assertEquals(highPriorityTariff.getPriceId().getId(), result.getTariffId());
         Assertions.assertEquals(productId, result.getProductId());
         Assertions.assertEquals(brandId, result.getBrandId());
-        Assertions.assertEquals(highPriorityTariff.getPriceDate().getStartDate(), result.getStartDate());
-        Assertions.assertEquals(highPriorityTariff.getPriceDate().getEndDate(), result.getEndDate());
+        Assertions.assertEquals(highPriorityTariff.getPriceDate().getStartDate(),
+            result.getStartDate());
+        Assertions.assertEquals(highPriorityTariff.getPriceDate().getEndDate(),
+            result.getEndDate());
         Assertions.assertEquals(highPriorityTariff.getPrice().getAmount(), result.getFinalPrice());
     }
 }
